--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+
+    <!--Favicon-->
+    <link rel="shortcut icon" href="./images/favicon.png">
+
+    <title>ABC - Ace Book Club</title>
+
 </head>
 <body>
 <div id="root"></div>
