Add font Varela and class on Error404

--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -5,6 +5,9 @@
 
     <!--Favicon-->
     <link rel="shortcut icon" href="./images/favicon.png">
+    
+    <!--Font Varela-->
+    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&amp;display=swap" rel="stylesheet">
 
     <title>ABC - Ace Book Club</title>
 
