--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
 
+    <!--Mobile Optimization-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <!--Favicon-->
     <link rel="shortcut icon" href="./images/favicon.png">
 
